[package]
name = "hello-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.7", features = ["custom"] }
solana-program = "1.14.3"
[dev-dependencies]
solana-sdk = "1.14.3"
solana-program-test = "1.14.3"
[lib]
crate-type = ["cdylib", "lib"]

